--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ES6</title>
+    <style>
+      body {
+        text-transform: capitalize;
+      }
+      .btn {
+        background: blue;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        text-transform: capitalize;
+      }
+    </style>
   </head>
   <body>
+    <button class="btn">click me</button>
     <script src="./app.js"></script>
   </body>
 </html>
