--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </style>
   </head>
   <body>
+    <h1>es6</h1>
+    <h1>html</h1>
+    <h1>css</h1>
+    <h1>javascript</h1>
+    <h2 id="result"></h2>
     <button class="btn">click me</button>
     <script src="./app.js"></script>
   </body>
