Array.from on DOM elements (nodelists)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <h1>html</h1>
     <h1>css</h1>
     <h1>javascript</h1>
+    <p>john</p>
+    <p>peter</p>
+    <p>susan</p>
     <h2 id="result"></h2>
+    <h1 id="second"></h1>
     <button class="btn">click me</button>
     <script src="./app.js"></script>
   </body>
