--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <p>susan</p>
     <h2 id="result"></h2>
     <h1 id="second"></h1>
+    <!-- <button class="btn">click me</button> -->
+
+    <!-- async -->
+    <h1 class="one">hello world</h1>
+    <h1 class="two">hello people</h1>
+    <h1 class="three">hello javascript</h1>
     <button class="btn">click me</button>
     <script src="./app.js"></script>
   </body>
